backend/kubernetes/ingress/v1/dp-echo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-echo-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dp-echo-1
  template:
    metadata:
      labels:
        app: dp-echo-1
    spec:
      containers:
        - name: pod-dp-echo
          image: k8s.gcr.io/echoserver:1.5
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svc-echo-1
spec:
  ports:
    - name: port-echo-1
      port: 9000
      targetPort: 8080
  selector:
    app: dp-echo-1
