backend/kubernetes/ingress/v1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-nginx
spec:
  ingressClassName: "nginx"
  rules:
    - host: www.daracbang.co.kr
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-echo-1
                port:
                  number: 9000
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: svc-nginx
                port:
                  number: 9001
    - host: api.daracbang.co.kr
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-echo-1
                port:
                  number: 9000
  tls:
    - hosts:
        - www.daracbang.co.kr
        - api.daracbang.co.kr
      secretName: letsencrypt-nginx
