backend/kubernetes/ingress/v1/test-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
    - host: test-myapp.co
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-echo-1
                port:
                  number: 9000
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: svc-nginx
                port:
                  number: 9001
